css/temp.css
:root{
    --text-primary: rgba(51, 51, 51, 1);
    --text-secondary: rgba(163, 30, 30, 1);
    --text-alert: rgba(226, 206, 19, 1);
    --text-info: rgba(19, 167, 226, 1);
    --text-black: rgb(15, 15, 15);
    --text-white: rgb(240, 240, 240);
    --text-success: rgb(57, 163, 30);
    
    --bg-primary: rgba(163, 30, 30, 1);
    --bg-primary-hover: rgba(163, 30, 30, .9);

    --bg-active: rgba(109, 35, 35, 0.7);
    --bg-alert: rgba(226, 206, 19, 1);
    --bg-white: rgb(255, 255, 255);
    --bg-dark: rgba(51, 51, 51, 1);
    --bg-light: rgb(184, 184, 184);


    --font-primary: font-family: 'Montserrat', sans-serif;
  
  
    /* CONTAINER HEIGHT ADJUSTMENTS */
    --banner-bar-height: 33px;
    --banner-height: 250px;
    --nav-height: 80px;
    --wrapper-height: 1000px;
    --footer-height: 50px;
}
.bg-main {
    background-color: rgba(163, 30, 30, 1);
}
/* FONTS  */
.text-roboto {
    font-family: "Roboto", Sans-serif;
}

.text-elite {
    font-family: 'Special Elite', cursive;
}

/* BUTTONS  */
.btn-outline-red {
    display: inline block;
    font-family: "Roboto", Sans-serif;
    font-weight: 500;
    font-size: 16px;
    letter-spacing: 1.1px;
    padding: 10px 18px;
    border-radius: 10px;
    border: 3px solid var(--bg-primary);
    color: white;
    text-decoration: none;
    transition: 0.2s;
}
.btn-outline-red:hover {
    background-color: rgba(163, 30, 30, .8);
    border: 3px solid rgba(163, 30, 30, 1);
    color: white;
}

* {
    margin: 0px;
    padding: 0px;
    font-family: var(--font-primary);
    font-size: 16px;
    letter-spacing: normal;
    color: var(--text-black);
    -webkit-tap-highlight-color: transparent;
}
select,
button,
textarea,
input {
    -webkit-tap-highlight-color: transparent;
}

/* 4 CONTAINERS .BANNER .NAV-BAR .WRAPPER */
.banner {
    max-height: var(--banner-height);
    width: 100%;
    margin: 0px;
    margin-bottom: 6px;
    padding: 0px;
} 
.nav-bar {
    width: 100%;
    background-color: var(--bg-primary);
    margin: 0px;
    padding: 0px;
} 
.container-fluid {
    margin:0px;
    padding:0px;
}
.wrapper {
    height: var(--wrapper-height);
    margin: 0px;
    padding: 0px;
}   
.navbar {
    margin: 0px;
    padding: 0px;
    z-index: 1000;
}
/* NAV-BAR FIXED AT BANNER HEIGHT WITH JS */
.fixed-top {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 11;

}
.footer {
     position: fixed;
     bottom: 0px;
     height: var(--footer-height);
     width: 100%;
     overflow: hidden;
     z-index: 99000;
     /* background-color: #333; */
}

/* === BANNER STYLE =========  */
.banner-bar {
    background-color: #333;
    box-shadow: 1px 2px 2px 0px gray;
    margin-bottom: 3px;
    height: var(--banner-bar-height);
    width: 100vw;
}

/* remove second image mobile  */
@media (max-width: 760px) {
    #bannerImg2 {
        display: none;
    }
}
/* === BANNER END/  =========  */



/* ======== NAVBAR ============  */

/* responsive menu  */
.navbar-nav {
    background-color: var(--bg-primary);
    margin: 0px;
    box-shadow: 1px 0px 2px 2px rgba(75, 12, 12, 0.7);
}
        /* top menu item */
.nav-bar .active {
    box-sizing: border-box;
    background-color: rgba(141, 24, 24, 0.7);
    box-shadow: 2px 3px 3px  rgba(75, 12, 12, 0.7);
    border-top-right-radius: 10px;
    border-top-left-radius: 10px;
    padding-left: 0px;
    margin-top: 10px;
    margin-right: 10px;
    margin-left: 10px;
    color: white;
}
        /* text  */
.navbar-nav .nav-item .nav-link {
    color:rgb(5, 5, 5);
    padding: 8px 6px;
    padding-left: 25px;
    margin: 0px;
}

.nav-bar .navbar-collapse .navbar-nav {
    box-sizing: border-box;
}
.nav-bar .navbar-collapse ul .active > .nav-link {
    color: white;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
    box-shadow: 1px 0px 0px 0px rgba(110, 10, 10, .8);
    border: 1px solid rgba(110, 10, 10, .9);
} 
/* top links but not last  */
.navbar-nav .nav-item .nav-link:not(:last-child){
    box-shadow: 1px 0px 1px rgba(110, 10, 10, .1);
    color: rgb(0, 0, 0);  
}

.navbar-nav .nav-item .nav-link:not(:last-child):hover
 {  
    background-color: var(--bg-primary);
    color: rgb(255, 255, 255);
    width: 100%;
    padding: 8px 6px;
    padding-left: 25px;
    margin-right: 25px;
}
.navbar-nav .nav-item .active {
    color: white;
}
/* drop down link  - middle ones */
.dropdown {
    box-sizing: border-box;
    border-radius: 0px;
    background-color: rgb(255, 255, 255);
    margin: 0px;
    margin-left: 10px;
    margin-right: 10px;
    box-shadow: 2px 0px 0px  rgb(110, 10, 10);
}

.navbar-nav .nav-item .dropdown-item {
    padding: 8px 6px;
    padding-left: 25px;
    margin: 0px;
}
.navbar-collapse .navbar-nav .nav-item:nth-last-child(1) {
    color: rgb(0, 0, 0);
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
    box-shadow: 2px 2px 2px rgb(110, 10, 10);
    background-color: rgb(255, 255, 255);
    margin-left: 10px;
    margin-right: 10px;
    margin-bottom: 25px;
}
.navbar-collapse .navbar-nav .nav-item:nth-last-child(1):hover {
    background-color: var(--bg-primary);
    color: white;
}
.dopdown-menu a:hover {
    background-color: rgb(129, 26, 26);
    padding-left: 25px;
    margin: 0px;
}
.dropdown-item {
    padding: 8px 6px;
    margin: 0px;
}
.dropdown-item:hover {
    background-color: var(--bg-primary);
    color: rgb(255, 255, 255);
    width: 100%;
    padding: 8px 6px;
    margin: 0px;
}
.navbar-collapse .navbar-nav .nav-item:nth-last-child(1) .nav-link:hover {
    color: rgb(255, 255, 255);   
}
/* ... */

